force-app/main/default/objects/Product2/fields/Month_Issue_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_Issue_Close_Date__c</fullName>
    <label>Month/Issue Close Date</label>
    <type>Date</type>
</CustomField>